[workspace]
resolver = "2"

members = [
    "ag/*",
    "core",
    "generic",
    "jiminy",
    "legacy/*",
    "lido/*",
    "marinade/*",
    "spl/*",
    "std",
    "update-traits",
    "wsol/*",
]

[workspace.package]
edition = "2021"
license-file = "LICENSE"
version = "0.1.0"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates
const-crypto = { version = "^0.3.0", default-features = false }
generic-array-struct = { version = "^0.3.2", default-features = false }
sanctum-fee-ratio = { version = "^2.1", default-features = false }
sanctum-u64-ratio = { version = "^2.1", default-features = false }

# dev-dependencies

# individual stake pool SDKs (for impls)
sanctum-marinade-liquid-staking-core = { git = "https://github.com/igneous-labs/sanctum-marinade-liquid-staking-sdk.git", branch = "main", default-features = false }
sanctum-spl-stake-pool-core = { git = "https://github.com/igneous-labs/sanctum-spl-stake-pool-sdk.git", branch = "master", default-features = false }
solido-legacy-core = { git = "https://github.com/igneous-labs/solido-legacy-sdk.git", branch = "master", default-features = false }

# jiminy crates
jiminy-cpi = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master", default-features = false }
jiminy-return-data = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master", default-features = false }

# workspace members
sanctum-svc-ag-core = { path = "ag/core" }
sanctum-svc-ag-std = { path = "ag/std" }
sanctum-svc-core = { path = "core" }
sanctum-svc-generic = { path = "generic" }
sanctum-svc-jiminy = { path = "jiminy" }
sanctum-svc-lido-core = { path = "lido/core" }
sanctum-svc-lido-std = { path = "lido/std" }
sanctum-svc-marinade-core = { path = "marinade/core" }
sanctum-svc-marinade-std = { path = "marinade/std" }
sanctum-svc-spl-core = { path = "spl/core" }
sanctum-svc-spl-std = { path = "spl/std" }
sanctum-svc-std = { path = "std" }
sanctum-svc-wsol-core = { path = "wsol/core" }
sanctum-svc-wsol-std = { path = "wsol/std" }
sanctum-update-traits = { path = "update-traits" }
sanctum-token-ratio-compat = { path = "legacy/sanctum-token-ratio-compat" }
