[package]
name = "inf1-svc-ag-core"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
inf1-svc-core = { workspace = true }
inf1-svc-generic = { workspace = true }
inf1-svc-lido-core = { workspace = true }
inf1-svc-marinade-core = { workspace = true }
inf1-svc-spl-core = { workspace = true }
inf1-svc-wsol-core = { workspace = true }
