[package]
name = "sanctum-svc-ag-core"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
sanctum-svc-core = { workspace = true }
sanctum-svc-generic = { workspace = true }
sanctum-svc-lido-core = { workspace = true }
sanctum-svc-marinade-core = { workspace = true }
sanctum-svc-spl-core = { workspace = true }
sanctum-svc-wsol-core = { workspace = true }
