[package]
name = "inf1-svc-ag-std"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
inf1-svc-ag-core = { workspace = true }
inf1-svc-lido-std = { workspace = true }
inf1-svc-marinade-std = { workspace = true }
inf1-svc-spl-std = { workspace = true }
inf1-svc-std = { workspace = true }
inf1-svc-wsol-std = { workspace = true }
