[package]
name = "sanctum-svc-ag-std"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
sanctum-svc-ag-core = { workspace = true }
sanctum-svc-lido-std = { workspace = true }
sanctum-svc-marinade-std = { workspace = true }
sanctum-svc-spl-std = { workspace = true }
sanctum-svc-std = { workspace = true }
sanctum-svc-wsol-std = { workspace = true }
