[package]
name = "inf1-svc-lido-core"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
const-crypto = { workspace = true }
inf1-svc-core = { workspace = true }
inf1-svc-generic = { workspace = true }
generic-array-struct = { workspace = true }
sanctum-token-ratio-compat = { workspace = true }
solido-legacy-core = { workspace = true }
