[package]
name = "sanctum-svc-lido-core"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
const-crypto = { workspace = true }
sanctum-svc-core = { workspace = true }
sanctum-svc-generic = { workspace = true }
generic-array-struct = { workspace = true }
sanctum-token-ratio-compat = { workspace = true }
solido-legacy-core = { workspace = true }
