[package]
name = "sanctum-svc-marinade-core"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
const-crypto = { workspace = true }
sanctum-svc-core = { workspace = true }
sanctum-svc-generic = { workspace = true }
generic-array-struct = { workspace = true }
sanctum-marinade-liquid-staking-core = { workspace = true }
sanctum-token-ratio-compat = { workspace = true }
sanctum-u64-ratio = { workspace = true }
