[package]
name = "inf1-svc-spl-core"
edition.workspace = true
license-file.workspace = true
version.workspace = true

[dependencies]
const-crypto = { workspace = true }
inf1-svc-core = { workspace = true }
inf1-svc-generic = { workspace = true }
generic-array-struct = { workspace = true }
sanctum-fee-ratio = { workspace = true }
sanctum-u64-ratio = { workspace = true }
sanctum-spl-stake-pool-core = { workspace = true }
sanctum-token-ratio-compat = { workspace = true }
